terraform/security_groups.tf
# Security Group for frontend (vote + result)
resource "aws_security_group" "frontend_sg" {
  name        = "tannaz-frontend-sg"
  description = "Allow HTTP and SSH"
  vpc_id      = aws_vpc.tannaz_vpc.id

  # Inbound rules
  ingress {
    description = "Allow HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    description = "Allow HTTP 8080"
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Allow HTTP 8081"
    from_port   = 8081
    to_port     = 8081
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Allow SSH only from my IP"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Outbound (allow everything)
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "tannaz-frontend-sg"
  }
}
# Security Group for backend (redis + worker)
resource "aws_security_group" "backend_sg" {
  name        = "tannaz-backend-sg"
  description = "Allow Redis and SSH from frontend"
  vpc_id      = aws_vpc.tannaz_vpc.id

  # Allow Redis from frontend SG
  ingress {
    description     = "Redis from frontend"
    from_port       = 6379
    to_port         = 6379
    protocol        = "tcp"
    security_groups = [aws_security_group.frontend_sg.id]
  }

  # Allow SSH from frontend SG
  ingress {
    description     = "SSH from frontend"
    from_port       = 22
    to_port         = 22
    protocol        = "tcp"
    security_groups = [aws_security_group.frontend_sg.id]
  }

  # Outbound: allow everything (backend can talk out to db etc.)
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "tannaz-backend-sg"
  }
}
# Security Group for database (PostgreSQL)
resource "aws_security_group" "db_sg" {
  name        = "tannaz-db-sg"
  description = "Allow Postgres from backend and SSH from frontend"
  vpc_id      = aws_vpc.tannaz_vpc.id

  # Postgres from backend only
  ingress {
    description     = "Postgres from backend"
    from_port       = 5432
    to_port         = 5432
    protocol        = "tcp"
    security_groups = [aws_security_group.backend_sg.id]
  }

  # SSH from frontend (bastion)
  ingress {
    description     = "SSH from frontend"
    from_port       = 22
    to_port         = 22
    protocol        = "tcp"
    security_groups = [aws_security_group.frontend_sg.id]
  }

  # Outbound: allow everything (DB can talk out if needed)
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "tannaz-db-sg"
  }
}
